test/bad/classes/struct06.px

class Class def
    Int x
    Int x
